--- a/LemonadeStand/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand/LemonadeStand.csproj
@@ -46,12 +46,12 @@
     <Compile Include="Customer.cs" />
     <Compile Include="Day.cs" />
     <Compile Include="GameController.cs" />
-    <Compile Include="LowerClass.cs" />
-    <Compile Include="MiddleClass.cs" />
+    <Compile Include="LowerClassCitizen.cs" />
+    <Compile Include="MiddleClassCitizen.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpperClass.cs" />
+    <Compile Include="UpperClassCitizen.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Weather.cs" />
   </ItemGroup>
